# libbencode

./: CMakeLists.txt  LICENSE  README.md
include/: bencode.h
src/: bencode.c
test/: test.c
